--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <scope>test</scope>
       <version>${junit-jupiter.version}</version>
     </dependency>
+    <dependency>
+      <artifactId>jackson-databind</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <version>2.15.0</version>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
