--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
       <version>1.18.28</version>
     </dependency>
 
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.9</version>
+    </dependency>
+
   </dependencies>
   <dependencyManagement>
     <dependencies>
